# weather_api_next

./: .gitignore  README.md  __init__.py  app.py  config.py  coverage.xml  pyproject.toml  requirements.txt  version.py
.github/workflows/: python-tests.yml
api/: __init__.py  routes.py
tests/: conftest.py  test_api.py  test_integration.py  test_routes.py  test_unit.py  test_validation.py
