[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather_api_next"
version = "0.1.0"
description = "A sample weather API project"
authors = [
    { name = "Chris Penick", email = "chris@chrispenick.com" }
]
dependencies = [
    "flask==2.0.1",
    "pytest==6.2.5",
    "gunicorn==20.1.0",
    "werkzeug==2.0.1"
]

[tool.setuptools.packages.find]
where = ["."]